<resources>
    <string name="app_name">AnyDoc</string>

    <!--add image-->
    <string name="tv_add_image_next">Next</string>
    <string name="tv_add_image_title">증상을 탐지하기 위한\n이미지를 추가해주세요</string>
    <string name="tv_add_image_tip">4장 이상의 사진을 업로드 해주시면 정확도가 더욱 높아집니다!</string>
    <string name="tv_add_image_count">%1$d / %2$d</string>
    <string name="tv_add_image_max">이미지는 최대 10개까지 추가할 수 있습니다.</string>
    <string name="tv_add_image_camera">카메라로 추가</string>
    <string name="tv_add_image_gallery">갤러리에서 추가</string>

    <!--splash-->
    <string name="splash_app_logo">app logo</string>
    <string name="splash_team_name">team name</string>

    <!--onboarding-->
    <string name="onboarding_illustration">onboarding illustration</string>
    <string name="onboarding_title"><![CDATA[<font color="#00B98C">AnyDoc</font>과 함께<br>사랑하는 반려동물의<br>피부 증상을 알아봐요]]></string>
    <string name="onboarding_move_to_next">Start</string>

    <!--loading-->
    <string name="loading_guide">증상을 탐지하는 중입니다...</string>
    <string name="loading_info_text01"> 💡  피부 증상이 있는 경우 자주 씻기는 게 좋아요!</string>
    <string name="loading_info_text02"> 💡  털을 규칙적으로 빗어주는 게 중요해요!</string>
    <string name="loading_info_text03"> 💡  자주 만지면서 피부에 뭐가 있는지 확인해주세요!</string>

    <!--ai result-->
    <string name="ai_result_title">피부 증상 탐지 결과지입니다.</string>
    <string name="ai_result_sub_title">주신 이미지 기반으로 분석된 결과입니다</string>
    <string name="ai_result_detected_notice">현재 아래와 같은 증상이 감지되었습니다</string>
    <string name="ai_result_radio_test_text">전체</string>
    <string name="ai_result_detected_info_more_info">more info about detected things</string>
    <string name="ai_result_detected_info_percent_title">| 진단 확률</string>
    <string name="ai_result_checklist">📌 진단 기반 체크리스트!</string>
    <string name="ai_result_hospital">🔎 주변 동물 병원 찾기</string>

    <!--vet clinics map-->
    <string name="tv_vet_clinics_title">🔎 주변 동물 병원 찾기</string>
    <string name="tv_vet_clinics_sub_title">나타난 증상 기반 정확한 질환 진단은 꼭 가까운 동물병원에 내원하셔서 알아보시길 바랍니다.</string>
    <string name="tv_vet_clinics_name">병원 이름</string>
    <string name="tv_vet_clinics_date">진료일</string>
    <string name="tv_vet_clinics_phone">전화번호</string>
</resources>