<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_onboarding_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.Title01"
            app:layout_constraintBottom_toTopOf="@id/iv_onboarding_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/onboarding_title" />


        <ImageView
            android:id="@+id/iv_onboarding_illustration"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginVertical="32dp"
            android:contentDescription="@string/onboarding_illustration"
            android:scaleType="centerInside"
            android:src="@drawable/ic_onboarding_illustration"
            app:layout_constraintBottom_toTopOf="@id/tv_onboarding_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_onboarding_title" />

        <TextView
            android:id="@+id/tv_onboarding_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_primary_fill_16_rect"
            android:paddingVertical="16dp"
            android:text="@string/onboarding_move_to_next"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.Content03"
            android:textColor="@color/anydoc_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_onboarding_illustration" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>