<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/anydoc_white"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_vet_clinics_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_example"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_vet_clinics_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_vet_clinics_name"
                android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.SubTitle01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cardView" />

            <TextView
                android:id="@+id/tv_vet_clinics_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_vet_clinics_date"
                android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.Content03"
                app:layout_constraintStart_toStartOf="@id/tv_vet_clinics_name"
                app:layout_constraintTop_toBottomOf="@id/tv_vet_clinics_name" />

            <TextView
                android:id="@+id/tv_vet_clinics_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_vet_clinics_phone"
                android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.Content03"
                app:layout_constraintStart_toStartOf="@id/tv_vet_clinics_date"
                app:layout_constraintTop_toBottomOf="@id/tv_vet_clinics_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>