<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_add_image"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_add_image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_add_image_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_explain"
                app:layout_constraintBottom_toBottomOf="@id/ib_add_image_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ib_add_image_back" />
        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/tv_add_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:text="@string/tv_add_image_title"
            android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.Title01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_image" />

        <TextView
            android:id="@+id/tv_add_image_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tv_add_image_tip"
            android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.Content03"
            android:textColor="@color/anydoc_neutral_40"
            app:layout_constraintStart_toStartOf="@id/tv_add_image_title"
            app:layout_constraintTop_toBottomOf="@id/tv_add_image_title" />

        <TextView
            android:id="@+id/tv_add_image_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_add_image_count"
            android:textAppearance="@style/TextAppearance.AnyDoc.Regular.Content04"
            android:textColor="@color/anydoc_neutral_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_image_tip" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_image_count"/>

        <Button
            android:id="@+id/btn_add_image_next"
            style="@style/AppButtonOnPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="25dp"
            android:text="@string/tv_add_image_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>