<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/ab_ai_result_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_ai_result_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_toolbar_arrow_back" />


                <ImageView
                    android:id="@+id/iv_ai_result_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_toolbar_question_mark" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ab_ai_result_appbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingHorizontal="32dp">

                <TextView
                    android:id="@+id/tv_ai_result_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ai_result_title"
                    android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.Title01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_ai_result_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/ai_result_sub_title"
                    android:textAppearance="@style/TextAppearance.AnyDoc.Regular.Content04"
                    android:textColor="@color/anydoc_neutral_40"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_ai_result_title" />

                <HorizontalScrollView
                    android:id="@+id/hs_ai_result_img_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_ai_result_sub_title">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcv_ai_result_img_recyclerview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:listitem="@layout/item_ai_result_img" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/tv_ai_result_detected_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/ai_result_detected_notice"
                    android:textAppearance="@style/TextAppearance.AnyDoc.SemiBold.SubTitle01"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hs_ai_result_img_scroll" />

                <HorizontalScrollView
                    android:id="@+id/hs_ai_result_filter_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_ai_result_detected_notice">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcv_ai_result_radio_recyclerview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:listitem="@layout/item_ai_result_radio" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </HorizontalScrollView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_ai_result_item_detected_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="28dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hs_ai_result_filter_scroll"
                    tools:listitem="@layout/item_ai_result_deteced_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>